@@ -7,13 +7,13 @@ def readme():
 
 setup(
     name='aceql',
-    version='1.0.1',
+    version='1.0.2',
     packages=['aceql', 'aceql._private', 'tests'],
     url='https://github.com/kawansoft/aceql-py',
     license='Apache 2.0',
 
     classifiers=[
-        'Development Status :: 4 - Beta',
+        'Development Status :: 5 - Production/Stable',
         'License :: OSI Approved :: Apache Software License',
         'Programming Language :: Python :: 2.6',
         'Programming Language :: Python :: 2.7',
