@@ -66,6 +66,10 @@ class TestAll(unittest.TestCase):
         connection = aceql.connect(host, "kawansoft_example", "user1", "password1", proxies=proxies, auth=auth)
         connection.set_gzip_result(True)
 
+        print()
+        print("aceql version: " + connection.get_client_version())
+        print()
+
         connection.set_holdability("hold_cursors_over_commit")
         holdability = connection.get_holdability()
         print("holdability: " + holdability)
